welcome.lessons.welcome.variables.Variables.scala.error
Variables:4: error: identifier expected but integer literal found.
setY(y:0)
       ^Variables:7: error: ')' expected but '}' found.
	}
        ^