welcome.lessons.welcome.variables.Variables.scala.code
while (!estSurBiscuit) {avance();}
if (estSurBiscuit) {prendBiscuit; porteBiscuit}
setY(y:0)
